Fixed the navigation spacing
went back to work on the navigation and it's spacing

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,11 @@
+.nav-style {
+  color: #454A59;
+  font-size: 2em;
+}
+.nav-space {
+  margin: 20px;
+  text-decoration: none;
+}
 .btn-color {
   width: 100px;
   padding: 10px;
@@ -186,17 +194,17 @@ p {
   align-items: center;
   text-decoration: none;
   background-color: #F1F1F1;
-  padding: 2em;
+  padding: 2em 2em 0 2em;
 }
 .nav-items {
   display: flex;
   justify-content: space-around;
   align-items: baseline;
-  padding: 1em;
   color: #454A59;
   font-size: 2em;
+  margin: 20px;
   text-decoration: none;
-  background-color: greenyellow;
+  margin-bottom: 0;
 }
 footer {
   color: #22283B;
