--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,4 +1,18 @@
 // Mixins Here
+
+.nav-style {
+    color: @river-bend;
+    font-size: 2em;
+}
+
+.nav-space {
+    margin: 20px;
+    text-decoration: none;
+}
+
+
+
+
 .btn-color {
     width: 100px;
     padding: 10px;
