--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,15 +13,15 @@
     align-items: center;
     text-decoration: none;
     background-color: @sea-shell;
-    padding: 2em;
+    padding: 2em 2em 0 2em;
 }
 .nav-items {
     display: flex;
     justify-content: space-around;
     align-items: baseline;
-    padding: 1em;
-    color: @river-bend;
-    font-size: 2em;
+    .nav-style;
     text-decoration: none;
-    background-color: greenyellow;
+    .nav-space;
+    margin-bottom: 0;
 }
+
